--- a/localization/kor/AigisMod-Keyword-Strings.json
+++ b/localization/kor/AigisMod-Keyword-Strings.json
@@ -151,6 +151,7 @@
     "PROPER_NAME": "스플래시 데미지",
     "NAMES": [
       "스플래시 데미지",
+      "스플래시 데미지를",
       "Splash",
       "splash",
       "splash."
