--- a/localization/kor/AigisMod-Keyword-Strings.json
+++ b/localization/kor/AigisMod-Keyword-Strings.json
@@ -23,6 +23,8 @@
     "NAMES": [
       "데미지아우라",
       "데미지 아우라",
+      "데미지 아우라를",
+      "데미지아우라를",
       "Damage Aura",
       "Damage_aura",
       "damage_aura"
