--- a/localization/kor/AigisMod-Card-Strings.json
+++ b/localization/kor/AigisMod-Card-Strings.json
@@ -437,24 +437,24 @@
   },
   "aigisMod:Suzune": {
     "NAME": "스즈네",
-    "DESCRIPTION": "Add 1 card from discard pile to hand. NL Exhaust.",
-    "UPGRADE_DESCRIPTION": "Add 1 card from discard pile to hand and reduce its cost to 1 for the combat. NL Exhaust.",
+    "DESCRIPTION": "버린 카드 더미에서 한 장을 손패로 가져옵니다. NL 소멸",
+    "UPGRADE_DESCRIPTION": "버린 카드 더미에서 한 장을 손패로 가져오고, 그 카드의 코스트를 1 로 만듭니다. NL 소멸",
     "EXTENDED_DESCRIPTION" : [
-      "Youri"
+      "요괴 너구리"
     ]
   },
   "aigisMod:Belinda": {
     "NAME": "벨린다",
-    "DESCRIPTION": "Deal !D! damage. NL Apply aigismod:Sluggish. NL aigismod:Pair: Cloris.",
-    "UPGRADE_DESCRIPTION": "Deal !D! damage. NL Apply aigismod:Sluggish. NL aigismod:Pair: Cloris and it cost 0 this turn.",
+    "DESCRIPTION": "!D! 데미지를 가합니다. NL Apply aigismod:Sluggish. NL aigismod:Pair: Cloris.",
+    "UPGRADE_DESCRIPTION": "!D! 데미지를 가합니다. NL Apply aigismod:Sluggish. NL aigismod:Pair: Cloris and it cost 0 this turn.",
     "EXTENDED_DESCRIPTION" : [
       "White Witch"
     ]
   },
   "aigisMod:Cloris": {
     "NAME": "클로리스",
-    "DESCRIPTION": "Deal !D! damage. NL Apply aigismod:Sluggish. NL aigismod:Pair: Belinda.",
-    "UPGRADE_DESCRIPTION": "Deal !D! damage. NL Apply aigismod:Sluggish. NL aigismod:Pair: Belinda and it cost 0 this turn.",
+    "DESCRIPTION": "!D! 데미지를 가합니다. NL Apply aigismod:Sluggish. NL aigismod:Pair: Belinda.",
+    "UPGRADE_DESCRIPTION": "!D! 데미지를 가합니다. NL Apply aigismod:Sluggish. NL aigismod:Pair: Belinda and it cost 0 this turn.",
     "EXTENDED_DESCRIPTION" : [
       "White Witch"
     ]
@@ -469,8 +469,8 @@
   },
   "aigisMod:Carrie": {
     "NAME": "캐리",
-    "DESCRIPTION": "Deal !D! damage. If it kills an enemy gain [E] NL After first use increase this card damage by 2.",
-    "UPGRADE_DESCRIPTION": "Deal !D! damage. If it kills an enemy gain [E] [E] NL After first use increase this card damage by 2.",
+    "DESCRIPTION": "!D! 데미지를 가합니다. If it kills an enemy gain [E] NL After first use increase this card damage by 2.",
+    "UPGRADE_DESCRIPTION": "!D! 데미지를 가합니다. If it kills an enemy gain [E] [E] NL After first use increase this card damage by 2.",
     "EXTENDED_DESCRIPTION" : [
       "Lancer"
     ]
