--- a/localization/kor/AigisMod-Keyword-Strings.json
+++ b/localization/kor/AigisMod-Keyword-Strings.json
@@ -32,10 +32,9 @@
     "DESCRIPTION": "턴 종료시, 모든 적에게 #y데미지를 가합니다."
   },
   {
-    "PROPER_NAME": "관통데미지",
+    "PROPER_NAME": "관통",
     "NAMES": [
-      "관통데미지",
-      "관통데미지를",
+      "관통",
       "True Damage",
       "True_damage",
       "true_damage"
