--- a/localization/kor/AigisMod-Card-Strings.json
+++ b/localization/kor/AigisMod-Card-Strings.json
@@ -282,7 +282,7 @@
       "쿠노이치"
     ]
   },
-  "aigisMod:수리검": {
+  "aigisMod:Shuriken": {
     "NAME": "수리검",
     "DESCRIPTION": "!D! 데미지를 !M! 회 가합니다. NL 소멸"
   },
